<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/back_bottom_sheet"
    app:behavior_hideable="true"
    app:behavior_peekHeight="56dp"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_line" />

    <EditText
        android:id="@+id/bottom_sheet_add_edt_add_habit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="true"
        android:background="@android:color/transparent"
        android:ems="10"
        android:fontFamily="@font/poppins_regular"
        android:hint="@string/bottom_sheet_add_habit_text_add_habit"
        android:inputType="textPersonName"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:singleLine="false"
        android:textColor="@color/white"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/bottom_sheet_select_category"
        android:textColor="@color/white_secondary_text"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bottom_sheet_add_edt_add_habit" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/bottom_sheet_chipgroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:clipChildren="true"
        app:checkedChip="@id/bottom_sheet_chip_personal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:singleLine="true"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/bottom_sheet_chip_personal"
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:checkable="false"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/bottom_sheet_chip_personal"
            android:textAlignment="center"
            android:textAppearance="@style/AppTheme.BottomSheetChip"
            app:chipIconVisible="false" />

        <com.google.android.material.chip.Chip
            android:id="@+id/bottom_sheet_chip_shopping"
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/bottom_sheet_chip_shopping"
            android:textAlignment="center"
            android:textAppearance="@style/AppTheme.BottomSheetChip" />

        <com.google.android.material.chip.Chip
            android:id="@+id/bottom_sheet_chip_important"
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/bottom_sheet_chip_important"
            android:textAlignment="center"
            android:textAppearance="@style/AppTheme.BottomSheetChip" />

        <com.google.android.material.chip.Chip
            android:id="@+id/bottom_sheet_chip_other"
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/bottom_sheet_chip_other"
            android:textAlignment="center"
            android:textAppearance="@style/AppTheme.BottomSheetChip" />
    </com.google.android.material.chip.ChipGroup>

    <Button
        android:id="@+id/bottom_sheet_button_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:background="#00FFFFFF"
        android:backgroundTint="@android:color/transparent"
        android:elevation="0dp"
        android:fontFamily="@font/poppins_bold"
        android:foreground="?selectableItemBackgroundBorderless"
        android:text="@string/bottom_sheet_btn_cancel"
        android:textAllCaps="false"
        android:textColor="@color/white_secondary_text"
        android:textSize="12sp"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/bottom_sheet_button_add"
        app:layout_constraintTop_toBottomOf="@+id/bottom_sheet_chipgroup" />

    <Button
        android:id="@+id/bottom_sheet_button_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/yellow"
        android:elevation="0dp"
        android:fontFamily="@font/poppins_bold"
        android:foreground="?selectableItemBackgroundBorderless"
        android:text="@string/bottom_sheet_btn_add"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:cornerRadius="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bottom_sheet_chipgroup" />

</androidx.constraintlayout.widget.ConstraintLayout>